--- a/doc/papers/06.2015/src/results.tex
+++ b/doc/papers/06.2015/src/results.tex
@@ -86,8 +86,8 @@ deep packet inspection.
 	\begin{tabular}{ | l | l | l | l | l | }
 	\hline
 	& UDP (1194) & TCP (1195) & DNS (53) & HTTP (80) \\ \hline
-	CUBIC & 45.75 & 8.88 &  45.37 & 0\footnote{During the small time frame it was active, the HTTP tunnel contributed roughly 1\% of the throughput and the contribution of the TCP tunnel was slightly reduced.} \\ \hline
-	OLIA & 46.77 & 7.74 & 45.49 & 0 \\ \hline
+	CUBIC & 45.75\% & 8.88\% &  45.37\% & 0\%\footnote{During the small time frame it was active, the HTTP tunnel contributed roughly 1\% of the throughput and the contribution of the TCP tunnel was slightly reduced.} \\ \hline
+	OLIA & 46.77\% & 7.74\% & 45.49\% & 0\% \\ \hline
 	\end{tabular}
 	\caption{Contribution of each tunnel towards total throughput}
 	\label{table:iodine}
