Make iodine a subsection of chapter 4

--- a/doc/papers/06.2015/src/results.tex
+++ b/doc/papers/06.2015/src/results.tex
@@ -95,7 +95,7 @@ deep packet inspection.
 \end{center}
 \end{savenotes}
 
-\section{IP-over-DNS tunneling with Iodine}
+\subsection{IP-over-DNS tunneling with Iodine}
 
 In order to gain a better understanding of how cellular network operators
 perform traffic shaping on port 53 we have run a separate series of throughput
