--- a/doc/papers/06.2015/src/setup.tex
+++ b/doc/papers/06.2015/src/setup.tex
@@ -43,4 +43,4 @@ Our experimental setup consists of a mobile terminal (a Galaxy Nexus I9250 phone
 
 The throughput distribution over the tunnels is analyzed to determine the performance for different combinations while taking into account the underlying network behavior and traffic policies applied by Operator 1.
 
-To try to mitigate the effects of DNS traffic shaping, we run a separate series of experiments using iodine tunnels. Iodine is a solution that allows the transfer of IPv4 data inside DNS queries to a server.
+To try to mitigate the effects of DNS traffic shaping, we run a separate series of experiments using Iodine tunnels. Iodine is a solution that allows the transfer of IPv4 data inside DNS queries to a server.
